Try working pmssm plotter

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
             <a href="https://arxiv.org/abs/1605.02797">1605.02797</a>
             <a href="https://arxiv.org/abs/1604.02959">1604.02959</a>, 
             </li>
-            <!--<li>See also this <a href="https://www.hep.phy.cam.ac.uk/~wfawcett/pmssm.html">parallel coordinates</a> plot I made for fun, as a new way to interpret the results </li>-->
-            <li>See also this <a href="https://www.hep.phy.cam.ac.uk/~wfawcett/new_index.html">parallel coordinates2</a> plot I made for fun, as a new way to interpret the results </li>
+            <li>See also this <a href="https://www.hep.phy.cam.ac.uk/~wfawcett/pmssm.html">parallel coordinates</a> plot I made for fun, as a new way to interpret the results </li>
             <br>
             ATLAS Collaboration<br>
             <i>JHEP 10 (2015) 134</i><br>
