--- a/pmssm.html
+++ b/pmssm.html
@@ -109,7 +109,7 @@ svg {
   </head>
   <body class="dark">
   <div id="wrap">
-    <h1>Parallel Coordinates - <a href="http://link.springer.com/article/10.1007%2FJHEP10%282015%29134">JHEP 10 (2015) 134</a> - <a href="http://hepdata.cedar.ac.uk/view/ins1389857">Model Points</a>     <img src="ox_brand_black_rev_rect.png" alt="Oxford Logo" height=32 align="right">  </h1>
+    <h1>Parallel Coordinates - <a href="http://link.springer.com/article/10.1007%2FJHEP10%282015%29134">JHEP 10 (2015) 134</a> - <a href="http://hepdata.cedar.ac.uk/view/ins1389857">Model Points</a>     <img src="University-of-Cambridge-logo.png" alt="Cambridge Logo" height=32 align="right">  </h1>
     <div id="chart">
       <canvas id="foreground"></canvas>
       <svg></svg>
