--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<h1><strong><a href="index.html"></a></strong> </h1>
 				<nav id="nav">
 					<ul>
-            <!--<li><a href="index.html">Home</a></li>-->
-            <!--<li><a href="generic.html">Generic</a></li>-->
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
             <!--<li><a href="elements.html">Elements</a></li>-->
 					</ul>
 				</nav>
