--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                 <p>I am a research associate in particle physics at the University of Cambridge. My research focuses on searching for new physics, primarily Supersymmetry, using data collected by the ATLAS experiment at the CERN Large Hadron Collider.  In addition, I contribute to the ATLAS ITk upgrade project. I am part of the <a href="https://www.hep.phy.cam.ac.uk/atlas/">Cambridge ATLAS group</a>.
 
 
-                <p> I have a strong interest in the application of machine learning techniques, which have the potential to assist in discoveries of new fundimental physics. 
+                <p> I have a strong interest in the application of machine learning techniques, which have the potential to assist in discoveries of new fundamental physics. 
                 This lead me to take part in the 2019 <a href="https://frontierdevelopmentlab.org/">NASA Frontier Development Lab</a>, where I am now a fellow. 
                 The Frontier Development Lab aims to bring together researchers to apply machine learning techniques to some of the toughest problems in the space sciences.
 
-                <p>Before coming to Cambridge, I completed my doctorate in particle physics at the University of Oxford under the supervison of 
+                <p>Before coming to Cambridge, I completed my doctorate in particle physics at the University of Oxford under the supervision of 
                 <a href=http://www-pnp.physics.ox.ac.uk/~barra/">Prof. Alan Barr.</a></p>
 							</div>
 						</div>
@@ -83,8 +83,8 @@
                 <img src=images/fcc_1.png title="FCC-hh tracker" style="max-width: 160px">
               </span>
             </a>
-            A study for a novel design of a tracker for one of the dectors for the future circular collider.
-            Track reconstruction at the future collider will be extrodainarily difficult, given the intense pileup conditions, and yet tracking information will be required at the trigger level in order to deail with the pileup conditions. A triplet of tracking layers is proposed, which has the potential to reconstruct tracks a the trigger level and help aleviate some problems with the intense pileup conditions. 
+            A study for a novel design of a tracker for one of the detector for the future circular collider.
+            Track reconstruction at the future collider will be extraordinarily difficult, given the intense pileup conditions, and yet tracking information will be required at the trigger level in order to detail with the pileup conditions. A triplet of tracking layers is proposed, which has the potential to reconstruct tracks a the trigger level and help alleviate some problems with the intense pileup conditions. 
            
             <br><br>
             FCC Collaboration<br>
@@ -106,7 +106,7 @@
               </span>
             </a>
             A search for new physics with signal regions containing as many as at least 11 high momentum jets, using 36.1/fb of data collected by the ATLAS detector from 2015--2017.
-            This is the most sophisitcated search for supersymmetry in the multijet series.
+            This is the most sophisticated search for supersymmetry in the multijet series.
             <br><br>
             ATLAS Collaboration<br>
             <i>JHEP 12 (2017) 034</i><br>
@@ -172,7 +172,7 @@
                 <img src="images/top_4jet.jpeg" title="Multijet CONF" alt="Multijet CONF" style="max-width: 160px">
               </span>
             </a>
-            An update of the above search for new physics in evets with high jet multiplicity with 18.2\fb of data. This time, jet substructure techniques were used to enhance the sensitivity of the search. 
+            An update of the above search for new physics in events with high jet multiplicity with 18.2\fb of data. This time, jet substructure techniques were used to enhance the sensitivity of the search. 
             <br><br>
             ATLAS Collaboration<br>
             ATLAS-CONF-2016-095 ,Geneva, CERN<br>
