--- a/blog.html
+++ b/blog.html
@@ -48,11 +48,11 @@
         <h3>Some pandas commands</h3>
         <p>Because I keep forgetting</p>
       </header>
-      <p>Work in proress</p>
+      <p>Work in prioress</p>
 
       <hr />
       <header>
-        <h3>A recepie for Rock buns</h3>
+        <h3>A recipe for Rock buns</h3>
         <p></p>
       </header>
       <p>Work in progress.</p>
