--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								</header>
 							</div>
 							<div class="6u$ 12u$(medium)">
-                <p>I am a Research Associate in particle physics at the University of Cambridge with the <a href="https://www.hep.phy.cam.ac.uk/contact/William/Fawcett">High Energy Physics</a></p> group. My research focuses on searching for new physics, primarily Supersymmetry, using data collected by the ATLAS experiment at the CERN Large Hadron Collider.  In addition, I contribute to the ATLAS ITk upgrade project. I am part of the <a href="https://www.hep.phy.cam.ac.uk/atlas/">Cambridge ATLAS group</a>.
+                <p>I am a Research Associate in particle physics at the University of Cambridge with the <a href="https://www.hep.phy.cam.ac.uk/contact/William/Fawcett">High Energy Physics</a> group. My research focuses on searching for new physics, primarily Supersymmetry, using data collected by the ATLAS experiment at the CERN Large Hadron Collider.  In addition, I contribute to the ATLAS ITk upgrade project. I am part of the <a href="https://www.hep.phy.cam.ac.uk/atlas/">Cambridge ATLAS group</a>.
 
 
                 <p> I have a strong interest in the application of machine learning techniques, which have the potential to assist in discoveries of new fundamental physics. 
