--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<nav id="nav">
 					<ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="publications.html">Publications</a></li>
             <li><a href="blog.html">Blog</a></li>
             <!--<li><a href="elements.html">Elements</a></li>-->
 					</ul>
