--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,27 @@
             <p></p>
             <br>
 
-            <!-- 2018 FCC note -->
+
+            <!-- 2021 Emu paper -->
+            <p id=Fawcett2020ITK"></p>
+            <h4> 
+            A search for new phenomena with lepton charge-flavour asymmetries using the ATLAS detector at 13 TeV
+              <a href="todo_add_link"><span class="image right"<img src=images/link-to-here.png title="Link to this paper" alt="Link to this paper" style="max-width:15px"></span></a>
+            </h4>
+            <a href=todo_add_link target="_blank">
+              <span class="image left">
+                <img src=images/fcc_1.png title="FCC-hh tracker" style="max-width: 160px">
+              </span>
+            </a>
+            Some Text aout the paper
+            <br><br>
+            ATLAS Collaboration<br>
+            <i>To Appear</i><br>
+            [<a href="todo_add_link" target="_blank">Paper</a>]
+            <p></p>
+            <br>
+
+            <!-- 2020 ITK paper -->
             <p id=Fawcett2020ITK"></p>
             <h4> 
               A self-seeded track trigger for the FCC-hh 
@@ -55,7 +75,6 @@
               </span>
             </a>
             Some Text aout the paper
-           
             <br><br>
             ATLAS Collaboration<br>
             <i>JINST 15 P09004</i><br>
