--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@
             <!-- 2020 ITK paper -->
             <p id=Fawcett2020ITK"></p>
             <h4> 
-              A self-seeded track trigger for the FCC-hh 
+           The ABC130 barrel module prototyping programme for the ATLAS strip tracker 
               <a href="https://iopscience.iop.org/article/10.1088/1748-0221/15/09/P09004"><span class="image right"<img src=images/link-to-here.png title="Link to this paper" alt="Link to this paper" style="max-width:15px"></span></a>
             </h4>
             <a href=https://iopscience.iop.org/article/10.1088/1748-0221/15/09/P09004 target="_blank">
@@ -79,6 +79,26 @@
             ATLAS Collaboration<br>
             <i>JINST 15 P09004</i><br>
             [<a href="https://iopscience.iop.org/article/10.1088/1748-0221/15/09/P09004" target="_blank">Paper</a>]
+            <p></p>
+            <br>
+
+            <!-- 2018 FCC note -->
+            <p id=Fawcett2018FccTracker"></p>
+            <h4> 
+              A self-seeded track trigger for the FCC-hh 
+              <a href="https://cds.cern.ch/record/2645273"><span class="image right"<img src=images/link-to-here.png title="Link to this paper" alt="Link to this paper" style="max-width:15px"></span></a>
+            </h4>
+            <a href=https://cds.cern.ch/record/2645273 target="_blank">
+              <span class="image left">
+                <img src=images/fcc_1.png title="FCC-hh tracker" style="max-width: 160px">
+              </span>
+            </a>
+            A study for a novel design of a tracker for one of the detector for the future circular collider.
+            Track reconstruction at the future collider will be extraordinarily difficult, given the intense pileup conditions, and yet tracking information will be required at the trigger level in order to detail with the pileup conditions. A triplet of tracking layers is proposed, which has the potential to reconstruct tracks a the trigger level and help alleviate some problems with the intense pileup conditions. 
+            <br><br>
+            FCC Collaboration<br>
+            <i>CERN-ACC-2018-0046</i><br>
+            [<a href="https://cds.cern.ch/record/2645273" target="_blank">Paper</a>]
             <p></p>
             <br>
 
