Add RPV SUSY summary conf

--- a/publications.html
+++ b/publications.html
@@ -170,6 +170,29 @@
             <p></p>
             <br>
 
+
+
+            <!-- RPV summary CONF -->
+            <p id="Fawcett2015RPVSummaryCONF"></p>
+            <h4>
+            Constraints on promptly decaying supersymmetric par- ticles with lepton-number- and R-parity-violating interactions using Run-1 ATLAS data
+              <a href="https://cds.cern.ch/record/2017303"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
+            </h4>
+            <a href="https://cds.cern.ch/record/2017303" target="_blank">
+              <span class="image left">
+                <img src="images/rpv_susy_plot.png" title="Multijet CONF" alt="Multijet CONF" style="max-width: 160px">
+              </span>
+            </a>
+            A comprehensive summary of constraints on R-parity violating supersymmetry using a combinations of ATLAS analyses and the Run-1 dataset. 
+            <br><br>
+            ATLAS Collaboration<br>
+            ATLAS-CONF-2015-018 ,Geneva, CERN<br>
+            [<a href="https://cds.cern.ch/record/2017303" target="_blank">Note</a>]
+            <p></p>
+            <br>
+
+
+
             <!-- Multijets CONF -->
             <p id="Fawcett2016MultijetsCONF"></p>
             <h4>
