--- a/publications.html
+++ b/publications.html
@@ -45,17 +45,17 @@
 
 
             <!-- 2021 Emu paper -->
-            <p id=Fawcett2020ITK"></p>
+            <p id=Fawcett2021Emu"></p>
             <h4> 
             A search for new phenomena with lepton charge-flavour asymmetries using the ATLAS detector at 13 TeV
               <a href="todo_add_link"><span class="image right"<img src=images/link-to-here.png title="Link to this paper" alt="Link to this paper" style="max-width:15px"></span></a>
             </h4>
             <a href=todo_add_link target="_blank">
               <span class="image left">
-                <img src=images/fcc_1.png title="FCC-hh tracker" style="max-width: 160px">
+                <img src=images/emu.png title="Emu asymmetry" style="max-width: 160px">
               </span>
             </a>
-            Some Text aout the paper
+            This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in theStandard Model. Wait and see if that assumption is really true!  
             <br><br>
             ATLAS Collaboration<br>
             <i>To Appear</i><br>
@@ -71,10 +71,14 @@
             </h4>
             <a href=https://iopscience.iop.org/article/10.1088/1748-0221/15/09/P09004 target="_blank">
               <span class="image left">
-                <img src=images/fcc_1.png title="FCC-hh tracker" style="max-width: 160px">
+                <img src=images/itk.jpeg title="ITK Module" style="max-width: 160px">
               </span>
             </a>
-            Some Text aout the paper
+            As part of the Phase-II upgrade of the ATLAS detector, a new silicon inner detector will be constructed. 
+            The future ATLAS strip tracker will include 118,000 silicon sensor modules in total.
+            This paper gives an overview of the components used in ABC130 barrel modules, their assembly procedure and findings resulting from their tests.
+
+
             <br><br>
             ATLAS Collaboration<br>
             <i>JINST 15 P09004</i><br>
