restore pubs with phg

--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,24 @@
             <br>
 
 
+            <!-- 2021 Emu paper -->
+            <p id=Fawcett2021Emu"></p>
+            <h4> 
+            A search for new phenomena with lepton charge-flavour asymmetries using the ATLAS detector at 13 TeV
+              <a href="todo_add_link"><span class="image right"<img src=images/link-to-here.png title="Link to this paper" alt="Link to this paper" style="max-width:15px"></span></a>
+            </h4>
+            <a href=todo_add_link target="_blank">
+              <span class="image left">
+                <img src=images/emu.jpeg title="Emu asymmetry" style="max-width: 160px">
+              </span>
+            </a>
+            This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in theStandard Model. Wait and see if that assumption is really true!  
+            <br><br>
+            ATLAS Collaboration<br>
+            <i>To Appear</i><br>
+            [<a href="todo_add_link" target="_blank">Paper</a>]
+            <p></p>
+            <br>
 
             <!-- 2020 ITK paper -->
             <p id=Fawcett2020ITK"></p>
