--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
                 <img src=images/emu.jpeg title="Emu asymmetry" style="max-width: 160px">
               </span>
             </a>
-            This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in theStandard Model. Wait and see if that assumption is really true!  
+            This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in the Standard Model. Wait and see if that assumption is really true!  
             <br><br>
             ATLAS Collaboration<br>
             <i>To Appear</i><br>
@@ -71,7 +71,7 @@
             </h4>
             <a href=https://iopscience.iop.org/article/10.1088/1748-0221/15/09/P09004 target="_blank">
               <span class="image left">
-                <img src=images/itk.jpeg title="ITK Module" style="max-width: 160px">
+                <img src=images/itk_2.jpeg title="ITK Module" style="max-width: 160px">
               </span>
             </a>
             As part of the Phase-II upgrade of the ATLAS detector, a new silicon inner detector will be constructed. 
