test out swapping

--- a/publications.html
+++ b/publications.html
@@ -34,34 +34,37 @@
 			<!-- Two, Research -->
         <section id="publications" class="wrapper style2">
           <div class="container" style="max-width: 1000px; line-height: 140%;">
-
             <header class="major special">
               <h2>Publications</h2>
               <p>All the links you could want</p>
             </header>
-
             <p></p>
             <br>
 
 
-            <!-- 2021 Emu paper -->
-            <p id=Fawcett2021Emu"></p>
-            <h4> 
-            A search for new phenomena with lepton charge-flavour asymmetries using the ATLAS detector at 13 TeV
-              <a href="todo_add_link"><span class="image right"<img src=images/link-to-here.png title="Link to this paper" alt="Link to this paper" style="max-width:15px"></span></a>
+
+            <!-- 2017 Multijet paper -->
+            <p id=Fawcett2017Multijets"></p>
+            <h4>
+              Search for new phenomena with large jet multiplicities and missing transverse momentum using large-radius jets and flavour-tagging at ATLAS in 13 TeV pp collisions
+              <a href=https://link.springer.com/article/10.1007%2FJHEP12%282017%29034"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
             </h4>
-            <a href=todo_add_link target="_blank">
+            <a href="https://link.springer.com/article/10.1007%2FJHEP12%282017%29034" target="_blank">
               <span class="image left">
-                <img src=images/emu.jpeg title="Emu asymmetry" style="max-width: 160px">
+                <img src="images/multijet_event_display.png" title="Many jet search" style="max-width: 160px">
               </span>
             </a>
-            This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in the Standard Model. Wait and see if that assumption is really true!  
+            A search for new physics with signal regions containing as many as at least 11 high momentum jets, using 36.1/fb of data collected by the ATLAS detector from 2015--2017.
+            This is the most sophisticated search for supersymmetry in the multijet series.
             <br><br>
             ATLAS Collaboration<br>
-            <i>To Appear</i><br>
-            [<a href="todo_add_link" target="_blank">Paper</a>]
+            <i>JHEP 12 (2017) 034</i><br>
+            [<a href="https://link.springer.com/article/10.1007%2FJHEP12%282017%29034" target="_blank">Paper</a>]
             <p></p>
             <br>
+
+
+
 
             <!-- 2020 ITK paper -->
             <p id=Fawcett2020ITK"></p>
@@ -77,8 +80,6 @@
             As part of the Phase-II upgrade of the ATLAS detector, a new silicon inner detector will be constructed. 
             The future ATLAS strip tracker will include 118,000 silicon sensor modules in total.
             This paper gives an overview of the components used in ABC130 barrel modules, their assembly procedure and findings resulting from their tests.
-
-
             <br><br>
             ATLAS Collaboration<br>
             <i>JINST 15 P09004</i><br>
