--- a/publications.html
+++ b/publications.html
@@ -43,15 +43,15 @@
 
 
 
-            <!-- 2017 Multijet paper -->
-            <p id=Fawcett2017Multijets"></p>
+            <!-- 2021 Emu paper -->
+            <p id=Fawcett2021Emu"></p>
             <h4>
-              Search for new phenomena with large jet multiplicities and missing transverse momentum using large-radius jets and flavour-tagging at ATLAS in 13 TeV pp collisions
+              This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in the Standard Model. Wait and see if that assumption is really true!
               <a href=https://link.springer.com/article/10.1007%2FJHEP12%282017%29034"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
             </h4>
             <a href="https://link.springer.com/article/10.1007%2FJHEP12%282017%29034" target="_blank">
               <span class="image left">
-                <img src="images/multijet_event_display.png" title="Many jet search" style="max-width: 160px">
+                <img src="images/emus.jpeg" title="Many jet search" style="max-width: 160px">
               </span>
             </a>
             A search for new physics with signal regions containing as many as at least 11 high momentum jets, using 36.1/fb of data collected by the ATLAS detector from 2015--2017.
