--- a/publications.html
+++ b/publications.html
@@ -46,20 +46,19 @@
             <!-- 2021 Emu paper -->
             <p id=Fawcett2021Emu"></p>
             <h4>
-              This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in the Standard Model. Wait and see if that assumption is really true!
-              <a href=https://link.springer.com/article/10.1007%2FJHEP12%282017%29034"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
+              A search for new phenomena with lepton charge-flavour asymmetries using the ATLAS detector at 13 TeV
+              <a href="to_add"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
             </h4>
-            <a href="https://link.springer.com/article/10.1007%2FJHEP12%282017%29034" target="_blank">
+            <a href="to_add" target="_blank">
               <span class="image left">
                 <img src="images/emus.jpeg" title="Many jet search" style="max-width: 160px">
               </span>
             </a>
-            A search for new physics with signal regions containing as many as at least 11 high momentum jets, using 36.1/fb of data collected by the ATLAS detector from 2015--2017.
-            This is the most sophisticated search for supersymmetry in the multijet series.
+              This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in the Standard Model. Wait and see if that assumption is really true!
             <br><br>
             ATLAS Collaboration<br>
             <i>JHEP 12 (2017) 034</i><br>
-            [<a href="https://link.springer.com/article/10.1007%2FJHEP12%282017%29034" target="_blank">Paper</a>]
+            [<a href="to_add" target="_blank">Paper</a>]
             <p></p>
             <br>
 
