add text about the army

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
 
                 <p>Before coming to Cambridge, I completed my doctorate in particle physics at the University of Oxford under the supervision of 
                 <a href=http://www-pnp.physics.ox.ac.uk/~barra/">Prof. Alan Barr.</a></p>
+
+
+                <p> While studying physics as an undergraduate student, I was also a member of the Universities Officer Training Corps, part of the British Army.  </p>
+
+
 							</div>
 						</div>
 					</div>
