see if emu works

--- a/publications.html
+++ b/publications.html
@@ -46,12 +46,12 @@
             <!-- 2021 Emu paper -->
             <p id=Fawcett2021Emu"></p>
             <h4>
-              A search for new phenomena with lepton charge-flavour asymmetries using the ATLAS detector at 13 TeV
-              <a href="to_add"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
+                A search for an unexpected asymmetry in the production of e+μ− and e−μ+ pairs in proton-proton collisions recorded by the ATLAS detector at s√=13 TeV
+              <a href="https://cds.cern.ch/record/2779180"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
             </h4>
             <a href="to_add" target="_blank">
               <span class="image left">
-                <img src="images/emus.jpeg" title="Many jet search" style="max-width: 160px">
+                <img src="images/emus.jpeg" title="Emu asymmetry search" style="max-width: 160px">
               </span>
             </a>
               This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in the Standard Model. Wait and see if that assumption is really true!
