--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@
             <!-- 2021 Emu paper -->
             <p id=Fawcett2021Emu"></p>
             <h4>
-                A search for an unexpected asymmetry in the production of e+μ− and e−μ+ pairs in proton-proton collisions recorded by the ATLAS detector at s√=13 TeV
+                A search for an unexpected asymmetry in the production of e+&mu;- and e-&mu;+ pairs in proton-proton collisions recorded by the ATLAS detector at s√=13 TeV
               <a href="https://cds.cern.ch/record/2779180"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
             </h4>
             <a href="to_add" target="_blank">
