add proper reference to paper

--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,7 @@
                 A search for an unexpected asymmetry in the production of e+&mu;- and e-&mu;+ pairs in proton-proton collisions recorded by the ATLAS detector at s√=13 TeV
               <a href="https://cds.cern.ch/record/2779180"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
             </h4>
-            <a href="to_add" target="_blank">
+            <a href="https://cds.cern.ch/record/2779180" target="_blank">
               <span class="image left">
                 <img src="images/emus.jpeg" title="Emu asymmetry search" style="max-width: 160px">
               </span>
@@ -57,7 +57,7 @@
               This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in the Standard Model. Wait and see if that assumption is really true!
             <br><br>
             ATLAS Collaboration<br>
-            <i>JHEP 12 (2017) 034</i><br>
+            <i>ATLAS-CONF-2021-045</i><br>
             [<a href="to_add" target="_blank">Paper</a>]
             <p></p>
             <br>
