add proper reference to paper

--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
             <br><br>
             ATLAS Collaboration<br>
             <i>ATLAS-CONF-2021-045</i><br>
-            [<a href="to_add" target="_blank">Paper</a>]
+            [<a href="https://cds.cern.ch/record/2779180" target="_blank">Paper</a>]
             <p></p>
             <br>
 
