--- a/publications.html
+++ b/publications.html
@@ -42,6 +42,25 @@
             <br>
 
 
+	        <!-- 2022 ML paper -->
+            <p id=Fawcett2022ML"></p>
+            <h4>
+                Solving combinatorial problems at particle colliders using machine learning
+              <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.016001"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
+            </h4>
+            <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.016001" target="_blank">
+              <span class="image left">
+                <img src="images/combinatorial.png" title="Combinatorial particle physics problems ML" style="max-width: 160px">
+              </span>
+            </a>
+		  We explore physics-informed using machine learning techniques to solve combinatorial problems relevant to searching for new fundamental particles with LHC data. 
+            <br><br>
+            A. Badea, W. Fawcett et al<br>
+            <i>Phys. Rev. D 106, 016001</i><br>
+            [<a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.016001" target="_blank">Paper</a>]
+            <p></p>
+            <br>
+
 
             <!-- 2021 Emu paper -->
             <p id=Fawcett2021Emu"></p>
@@ -54,7 +73,7 @@
                 <img src="images/emus.jpeg" title="Emu asymmetry search" style="max-width: 160px">
               </span>
             </a>
-              This paper present a completely novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which would appear to be conserved in the Standard Model. Wait and see if that assumption is really true!
+              This paper presents a novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which appears to be conserved in the Standard Model. We test that assumption in this paper and  use the results to set limits on unique new physics scenarios.
             <br><br>
             ATLAS Collaboration<br>
             <i>ATLAS-CONF-2021-045</i><br>
@@ -97,7 +116,7 @@
                 <img src=images/fcc_1.png title="FCC-hh tracker" style="max-width: 160px">
               </span>
             </a>
-            A study for a novel design of a tracker for one of the detector for the future circular collider.
+            A study for a novel design of a tracker for one of the detectors for the future circular collider.
             Track reconstruction at the future collider will be extraordinarily difficult, given the intense pileup conditions, and yet tracking information will be required at the trigger level in order to detail with the pileup conditions. A triplet of tracking layers is proposed, which has the potential to reconstruct tracks a the trigger level and help alleviate some problems with the intense pileup conditions. 
             <br><br>
             FCC Collaboration<br>
