--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
   <div class="container">
     <header class="major special">
       <h2>William Fawcett's Blog</h2>
-      <p>A collection of musings</p>
+      <p>Some thoughts</p>
     </header>
 
     <!-- Text -->
