add new section for combinatorial paper

--- a/publications.html
+++ b/publications.html
@@ -36,14 +36,32 @@
           <div class="container" style="max-width: 1000px; line-height: 140%;">
             <header class="major special">
               <h2>Publications</h2>
-              <p>All the links you could want</p>
+              <!-- <p>All the links you could want</p> -->
             </header>
+            <p></p>
+            <br>
+
+            <!-- 2024 RPV MJ paper -->
+            <p id="Fawcett2024ML"></p>
+            <h4>
+              A search for R-parity-violating supersymmetry in final states containing many jets in pp collisions at √s=13 TeV with the ATLAS detector
+              <a href="https://link.springer.com/article/10.1007/JHEP05(2024)003"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
+            </h4>
+            <a href="https://link.springer.com/article/10.1007/JHEP05(2024)003" target="_blank">
+              <span class="image left">
+                <img src="images/attention1.png" title="Combinatorial particle physics problems ML" style="max-width: 160px">
+              </span>
+            </a>
+              A deep-learning approach to search for new physics using the novel tensor-attention mechanism to solve the combinatorial problem of matching jets to partons. The first paper to pioneer this new method.             <br><br>
+              W. Fawcett et al (ATLAS Collaboration)<br>
+            <i>JHEP 05 (2024) 003</i><br>
+            [<a href="https://link.springer.com/article/10.1007/JHEP05(2024)003" target="_blank">Paper</a>]
             <p></p>
             <br>
 
 
 	        <!-- 2022 ML paper -->
-            <p id=Fawcett2022ML"></p>
+            <p id="Fawcett2022ML"></p>
             <h4>
                 Solving combinatorial problems at particle colliders using machine learning
               <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.016001"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
@@ -63,21 +81,22 @@
 
 
             <!-- 2021 Emu paper -->
-            <p id=Fawcett2021Emu"></p>
+            <p id="Fawcett2021Emu"></p>
             <h4>
-                A search for an unexpected asymmetry in the production of e+mu- and e-mu+ pairs in proton-proton collisions recorded by the ATLAS detector at s√=13 TeV
-              <a href="https://cds.cern.ch/record/2779180"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
+                A search for an unexpected asymmetry in the production of e+mu- and e-mu+ pairs in proton-proton collisions recorded by the ATLAS detector at √s=13 TeV
+              <a href="https://www.sciencedirect.com/science/article/pii/S0370269322002404"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
             </h4>
-            <a href="https://cds.cern.ch/record/2779180" target="_blank">
+            <a href="https://www.sciencedirect.com/science/article/pii/S0370269322002404" target="_blank">
               <span class="image left">
                 <img src="images/emus.jpeg" title="Emu asymmetry search" style="max-width: 160px">
               </span>
             </a>
               This paper presents a novel approach to searching for new physics, exploiting the combination of charge-flavour symmetry, which appears to be conserved in the Standard Model. We test that assumption in this paper and  use the results to set limits on unique new physics scenarios.
             <br><br>
-            ATLAS Collaboration<br>
+            Phys Lett B. 830 (2022) 137106<br>
+
             <i>ATLAS-CONF-2021-045</i><br>
-            [<a href="https://cds.cern.ch/record/2779180" target="_blank">Paper</a>]
+            [<a href="https://www.sciencedirect.com/science/article/pii/S0370269322002404" target="_blank">Paper</a>]
             <p></p>
             <br>
 
@@ -119,7 +138,7 @@
             A study for a novel design of a tracker for one of the detectors for the future circular collider.
             Track reconstruction at the future collider will be extraordinarily difficult, given the intense pileup conditions, and yet tracking information will be required at the trigger level in order to detail with the pileup conditions. A triplet of tracking layers is proposed, which has the potential to reconstruct tracks a the trigger level and help alleviate some problems with the intense pileup conditions. 
             <br><br>
-            FCC Collaboration<br>
+            W. Fawcett et al (FCC Collaboration)<br>
             <i>CERN-ACC-2018-0046</i><br>
             [<a href="https://cds.cern.ch/record/2645273" target="_blank">Paper</a>]
             <p></p>
@@ -140,7 +159,7 @@
             A search for new physics with signal regions containing as many as at least 11 high momentum jets, using 36.1/fb of data collected by the ATLAS detector from 2015--2017.
             This is the most sophisticated search for supersymmetry in the multijet series.
             <br><br>
-            ATLAS Collaboration<br>
+            W. Fawcett et al (ATLAS Collaboration)<br>
             <i>JHEP 12 (2017) 034</i><br>
             [<a href="https://link.springer.com/article/10.1007%2FJHEP12%282017%29034" target="_blank">Paper</a>]
             <p></p>
@@ -149,7 +168,7 @@
             <!-- 2015 Multijet paper -->
             <p id="Fawcett2016Multijets"></p>
             <h4>
-              Search for new phenomena in final states with large jet multiplicities and missing transverse momentum with ATLAS using sqrt(s)=13 TeV proton–proton collisions
+              Search for new phenomena in final states with large jet multiplicities and missing transverse momentum with ATLAS using  √s=13 TeV proton–proton collisions
               <a href="http://www.sciencedirect.com/science/article/pii/S0370269316300752"><span class="image right"><img src="images/link-to-here.png" title="Link to this paper" alt="Link to this paper" style="max-width: 15px"></span></a>
             </h4>
             <a href="http://www.sciencedirect.com/science/article/pii/S0370269316300752" target="_blank">
@@ -159,7 +178,7 @@
             </a>
             A search for new phenomena in events with high jet multiplicity and missing transverse momentum with 3.2/fb of data collected by the ATLAS detector in 2015. This was the first search for Supersymmetry to be published with 13 TeV data from the LHC. 
             <br><br>
-            ATLAS Collaboration<br>
+            W. Fawcett et al (ATLAS Collaboration)<br>
             <i>Phys. Lett. B. 757 (2016) 334</i><br>
             [<a href="http://www.sciencedirect.com/science/article/pii/S0370269316300752" target="_blank">Paper</a>]
             <p></p>
@@ -189,7 +208,7 @@
               <li>See also this <a href="https://www.hep.phy.cam.ac.uk/~wfawcett/pmssm.html">parallel coordinates</a> plot I made for fun, as a new way to interpret the results </li>
             </ul>
             <br>
-            ATLAS Collaboration<br>
+            W. Fawcett et al (ATLAS Collaboration)<br>
             <i>JHEP 10 (2015) 134</i><br>
             [<a href="http://link.springer.com/article/10.1007%2FJHEP10%282015%29134" target="_blank">Paper</a>]
             <p></p>
@@ -210,7 +229,7 @@
             </a>
             A comprehensive summary of constraints on R-parity violating supersymmetry using a combinations of ATLAS analyses and the Run-1 dataset. 
             <br><br>
-            ATLAS Collaboration<br>
+            W. Fawcett et al (ATLAS Collaboration)<br>
             ATLAS-CONF-2015-018 ,Geneva, CERN<br>
             [<a href="https://cds.cern.ch/record/2017303" target="_blank">Note</a>]
             <p></p>
@@ -231,7 +250,7 @@
             </a>
             An update of the above search for new physics in events with high jet multiplicity with 18.2\fb of data. This time, jet substructure techniques were used to enhance the sensitivity of the search. 
             <br><br>
-            ATLAS Collaboration<br>
+            W. Fawcett et al (ATLAS Collaboration)<br>
             ATLAS-CONF-2016-095 ,Geneva, CERN<br>
             [<a href="https://cds.cern.ch/record/2212161" target="_blank">Note</a>]
             <p></p>
