--- a/publications.html
+++ b/publications.html
@@ -52,7 +52,7 @@
                 <img src="images/attention1.png" title="Combinatorial particle physics problems ML" style="max-width: 160px">
               </span>
             </a>
-              A deep-learning approach to search for new physics using the novel tensor-attention mechanism to solve the combinatorial problem of matching jets to partons. The first paper to pioneer this new method.             <br><br>
+              A deep-learning approach to search for new physics using the novel tensor-attention mechanism to solve the combinatorial problem of matching jets to partons. The first paper to pioneer this new method, and the strongest limits on new physics models were set in some cases.<br><br>
               W. Fawcett et al (ATLAS Collaboration)<br>
             <i>JHEP 05 (2024) 003</i><br>
             [<a href="https://link.springer.com/article/10.1007/JHEP05(2024)003" target="_blank">Paper</a>]
