--- a/publications.html
+++ b/publications.html
@@ -1,26 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>William Fawcett's Publications</title>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="stylesheet" href="assets/css/main.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>William Fawcett's Publications</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+    <!-- Header -->
+    <header id="header">
+        <h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
+        <nav id="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <!--<li><a href="generic.html">Generic</a></li>-->
+                <li><a href="publications.html">Publications</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<!-- Header -->
-<header id="header">
-  <h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1>
-  <nav id="nav">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <!--<li><a href="generic.html">Generic</a></li>-->
-      <li><a href="publications.html">Publications</a></li>
-      <li><a href="blog.html">Blog</a></li>
-    </ul>
-  </nav>
-</header>
+    <a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
-<a href="#menu" class="navPanelToggle"><span class="fa fa-bars"></span></a>
 
 <!-- Main -->
 <section id="main" class="wrapper">
