--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@
             </h4>
             <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.106.016001" target="_blank">
               <span class="image left">
-                <img src="images/combinatorial.jpeg" title="Combinatorial particle physics problems ML" style="max-width: 160px">
+                <img src="images/combinatorial.png" title="Combinatorial particle physics problems ML" style="max-width: 160px">
               </span>
             </a>
 		  We explore physics-informed using machine learning techniques to solve combinatorial problems relevant to searching for new fundamental particles with LHC data. 
